--- a/.github/workflows/release-datapack.yml
+++ b/.github/workflows/release-datapack.yml
@@ -56,7 +56,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           tag: auto-${{ github.run_number }}
-          name: Automated Datapack Release #${{ github.run_number }}
+          name: Superflat Achievements Download #${{ github.run_number }}
           artifacts: ${{ steps.build.outputs.zip_name }}
           generateReleaseNotes: true
           allowUpdates: false
